--- a/doc/LSM.in
+++ b/doc/LSM.in
@@ -1,12 +1,12 @@
 Begin3
-Title:		mrxvt
+Title:		lxvt
 Version:	@MRXVT_VERSION@
 Entered-date:	@MRXVT_LSMDATE@
 
 Description:	@MRXVT_WEBPAGE@
 		Mrxvt is a terminal emulator for X Window System. It provides
 		DEC VT102 compatible terminals for programs that cannot use
-		the window system directly. The primary features of mrxvt
+		the window system directly. The primary features of lxvt
 		include (but not limit to) multi-tab and runtime changeable
 		tab titles, session for each tab, input broadcasting, true
 		translucent window, fast pseudo-transparent background, user
@@ -14,11 +14,11 @@ Description:	@MRXVT_WEBPAGE@
 		tinting, off-focus fading, text shadow, multiple style (NeXT,
 		Rxvt, Xterm, SGI, Plain) scrollbar, XIM, multi-languages
 		(Chinese, Korean, Japanese), freetype font and logging. Like
-		rxvt, mrxvt aims to be light, fast, flexible and desktop
+		rxvt, lxvt aims to be light, fast, flexible and desktop
 		independant, thus KDE or GNOME are not required.
 
 
-Keywords:	mrxvt colour color kanji xterm X11 vt100 terminal-emulator
+Keywords:	lxvt colour color kanji xterm X11 vt100 terminal-emulator
 		xpm menu
 
 Author:		* John Bovey [Univ. Kent at Canterbury] was the creator of
@@ -49,7 +49,7 @@ Author:		* John Bovey [Univ. Kent at Canterbury] was the creator of
 Maintained-by:	@MRXVT_MAINT@ @MRXVT_MAINTEMAIL@ Project Coordinator
 
 Original-site:	@MRXVT_FTPSITENAME@ @MRXVT_FTPSITEDIR@
-		440k	mrxvt-@MRXVT_VERSION@.tar.gz
+		440k	lxvt-@MRXVT_VERSION@.tar.gz
 
 Platforms:	requires X11 installed
 
